// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSlots sample code test suite renders sample 1 - the two types of basic bold text components 1`] = `
<div>
  <span
    style={
      {
        "color": "black",
        "fontWeight": 900,
      }
    }
  >
    Staged component at one level
  </span>
  <span
    style={
      {
        "color": "black",
        "fontWeight": 900,
      }
    }
  >
    Standard component of a single level
  </span>
</div>
`;

exports[`useSlots sample code test suite renders sample 2 = the two types of two level header components 1`] = `
<div>
  <span
    style={
      {
        "color": "black",
        "fontSize": 20,
        "fontWeight": 900,
      }
    }
  >
    Staged component with two levels
  </span>
  <span
    style={
      {
        "color": "black",
        "fontSize": 20,
        "fontWeight": 900,
      }
    }
  >
    Standard component with two levels
  </span>
</div>
`;

exports[`useSlots sample code test suite renders sample 3 - the two types of higher order header components 1`] = `
<div>
  <span>
    --- SIMPLE USAGE COMPARISON ---
  </span>
  <div
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <span
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Standard HOC
    </span>
  </div>
  <div
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <span
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Staged HOC
    </span>
  </div>
  <span>
    --- COMPARISON WITH CAPTIONS ---
  </span>
  <div
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <span
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Standard HOC with Caption
    </span>
    <span
      style={
        {
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </span>
  </div>
  <div
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <span
      style={
        {
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Staged HOC with Caption
    </span>
    <span
      style={
        {
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </span>
  </div>
  <span>
    --- COMPARISON WITH CAPTIONS AND CUSTOMIZATIONS ---
  </span>
  <div
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <span
      style={
        {
          "color": "red",
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Standard HOC with caption and customizations
    </span>
    <span
      style={
        {
          "color": "yellow",
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </span>
  </div>
  <div
    style={
      {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <span
      style={
        {
          "color": "red",
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Staged HOC with caption and customizations
    </span>
    <span
      style={
        {
          "color": "yellow",
          "fontWeight": 900,
        }
      }
    >
      Caption text
    </span>
  </div>
</div>
`;
